# indexer

./: .env.template  hello.py  paper_indexer.py  pyproject.toml
indexer/: __init__.py  client.py  config.py  constructor.py  db.py  embed.py  function.py  index.py  indexer.py  table.py  utils.py
recllm_indexer/: __init__.py  client.py  db.py  embed.py  function.py  index.py  record.py  table.py  utils.py
