[project]
name = "recllm_indexer"
version = "0.3.0"
description = "RecLLM Indexer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cohere>=5.15.0",
    "google-genai>=1.10.0",
    "recllm-core",
]

[tool.uv.sources]
recllm-core = { git = "ssh://git@github.com/recllm-org/core.git" }
